--- a/client/package.json
+++ b/client/package.json
@@ -12,21 +12,25 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^3.0.0-beta.24",
     "browser-image-compression": "^2.0.2",
     "drizzle-orm": "^0.29.3",
+    "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "next": "15.3.1",
     "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "tmp-promise": "^3.0.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20",
     "@types/pg": "^8.11.13",
     "@types/react": "^19",
