--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/react": "^3.0.0-beta.24",
     "browser-image-compression": "^2.0.2",
     "drizzle-orm": "^0.29.3",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "next": "15.3.1",
