--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.6.2",
     "@material-tailwind/react": "^3.0.0-beta.24",
     "browser-image-compression": "^2.0.2",
     "drizzle-orm": "^0.29.3",
