--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@material-tailwind/react": "^3.0.0-beta.24",
     "browser-image-compression": "^2.0.2",
     "drizzle-orm": "^0.29.3",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
