--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
     "drizzle-kit": "^0.20.14",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "express": "^5.1.0",
+    "https": "^1.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
