--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
@@ -25,6 +26,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
+    "multer": "^2.0.1",
     "next": "15.3.1",
     "pg": "^8.14.1",
     "react": "^18.2.0",
