--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push": "drizzle-kit push",
+    "db:push": "drizzle-kit push:pg",
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.6.2",
     "@material-tailwind/react": "^3.0.0-beta.24",
+    "@types/nodemailer": "^7.0.4",
     "@vercel/speed-insights": "^1.2.0",
     "browser-image-compression": "^2.0.2",
     "drizzle-orm": "^0.29.3",
@@ -28,6 +29,7 @@
     "formik": "^2.4.6",
     "multer": "^2.0.1",
     "next": "15.3.1",
+    "nodemailer": "^7.0.12",
     "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
