--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.962.0",
     "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
